fix deprecated URL(String) constructor usage
Replace new URL(String) with URI.create(...).toURL() in ZkDomElementDescriptorHolder, MavenRunnerPatcher, and ZKProjectsManager to resolve JetBrains marketplace compatibility warning about deprecated URL constructor.